bug 423964 uninitialized variable, r=sdwilsh, a=beltzner